jenkins-service.yml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
spec:
  selector:
    app: jenkins
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer  # Change to NodePort or ClusterIP if needed


#commands :

#  aws eks --region us-west-1 update-kubeconfig --name ems-eks-cluster
#  aws configure list
#  aws sts get-caller-identity
#  aws eks update-kubeconfig --name=ems-eks-cluster
#  kubectl create -f jenkins-service.yml
#  kubectl port-forward service/jenkins-service 8080:8080
